[package]
name = "yarn_spool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3.0"
prost = "0.11.3"
csv = "1.1.6"
serde = { version = "1.0.148", features = ["derive"] }

[build-dependencies]
prost-build = "0.11.3"
